<resources>
    <string name="app_name">SYM_labo3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Accueil</string>
    <string name="home_msg">Cette application a été créé pour le 3ème laboratoire du cours SYM à la HEIG-VD.</string>
    <string name="title_nfc">NFC</string>
    <string name="title_bar_code">BarCode</string>
    <string name="title_ibeacon">IBeacon</string>
    <string name="title_compass">Compass</string>
    <string name="nfc_title">Identification par NFC</string>
    <string name="password_and_nfc">Password and NFC</string>
    <string name="password_or_nfc">Password or NFC</string>
    <string name="please_enter_your_password">Please enter your password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="nfc_indication">Use your NFC to validate your credentials</string>
    <string name="btn_submit_txt">Submit</string>
    <string name="or_txt">OR</string>
    <string name="beacon_list">Beacon list</string>
    <string name="logged_access_txt">Security level content page</string>
    <string name="btn_authenticate_max_txt">AUTHENTICATE_MAX</string>
    <string name="btn_authenticate_medium_txt">AUTHENTICATE_MEDIUM</string>
    <string name="btn_authenticate_low_txt">AUTHENTICATE_LOW</string>
    <string name="btn_disconnect_txt">DISCONNECT</string>
    <string name="btn_refresh_txt">REFRESH</string>
    <string name="title_activity_logged_access">LoggedAccess</string>
    <string name="security_logged_txt">Put your NFC TAG to update your security</string>
    <string name="security_level_txt">Last security level</string>
    <string name="nfc_disabled_txt">NFC is disabled.</string>
    <string name="no_nfc_tag_txt">No NFC TAG</string>
    <string name="scan_result_txt">Result</string>
    <string name="btn_1d_txt">1D</string>
    <string name="btn_2d_txt">2D</string>
    <string name="tag_detected">A tag has been detected !</string>
    <string name="sym_labo_3">SYM - Labo 3</string>
    <string name="unsufficient_auth_lvl">Your access level is not high enough. Please refresh your security or get a promotion from your superior</string>
</resources>
