<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/title_home" />
        <item
            android:id="@+id/nav_bar_code"
            android:title="@string/title_bar_code" />
        <item
            android:id="@+id/nav_ibeacon"
            android:title="@string/title_ibeacon" />
        <item
            android:id="@+id/nav_compass"
            android:title="@string/title_compass" />
    </group>

    <item android:title="NFC">
        <menu>
            <item
                android:id="@+id/nav_nfc_and_password"
                android:title="@string/password_and_nfc" />
            <item
                android:id="@+id/nav_nfc_or_password"
                android:title="@string/password_or_nfc" />
        </menu>
    </item>

</menu>
