<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ch.heigvd.iict.sym.sym_labo3.fragment.LoggedCommands">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10sp">


        <TextView
            android:id="@+id/title_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logged_access_txt"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginBottom="10sp" />

        <Button
            android:id="@+id/btn_auth_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate_max_txt" />

        <Button
            android:id="@+id/btn_auth_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate_medium_txt" />

        <Button
            android:id="@+id/btn_auth_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate_low_txt" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/security_lvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:text="@string/security_level_txt" />

            <Button
                android:id="@+id/btn_refresh_auth_lvl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_refresh_txt" />


        </LinearLayout>

        <TextView
            android:id="@+id/security_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_logged_txt" />

        <TextView
            android:id="@+id/result_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_auth_disconnect"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_disconnect_txt" />

    </LinearLayout>

</FrameLayout>
