<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ch.heigvd.iict.sym.sym_labo3.auth.LoggedAccess"
    tools:showIn="@layout/activity_logged_access">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="10sp">


        <TextView
            android:id="@+id/title_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/logged_access_txt"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="#000000"
            android:layout_marginBottom="10sp" />

        <Button
            android:id="@+id/btn_auth_max"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate_max_txt" />

        <Button
            android:id="@+id/btn_auth_medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate_medium_txt" />

        <Button
            android:id="@+id/btn_auth_low"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_authenticate_low_txt" />

        <TextView
            android:id="@+id/security_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/security_logged_txt" />

        <TextView
            android:id="@+id/result_logged"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
